--- a/pom.xml
+++ b/pom.xml
@@ -103,5 +103,11 @@
             <version>1.0-SNAPSHOT-7</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.9.3</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
