--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 
     <developers>
         <developer>
-            <name>PolarianDev</name>
-            <email>polariandev@protonmail.com</email>
+            <name>Polarian</name>
+            <email>polarian@polarian.dev</email>
         </developer>
     </developers>
 
